# season_quiz_discovery

./: .gitignore  QUICKSTART.md  README.md  app.py  pyproject.toml  redner.yaml
static/: style.css
templates/: index.html  quiz.html  result.html
